--- a/Server/lib/Web/views/m_kkutu.pug
+++ b/Server/lib/Web/views/m_kkutu.pug
@@ -109,13 +109,13 @@ block Middle
 				p 유한선
 				br
 				strong CLOSED BETA TEST
-				p Sqlare Team   Kompasu   PSP Members
+				p Sqlare Team&nbsp;&nbsp;&nbsp;Kompasu&nbsp;&nbsp;&nbsp;PSP Members
 				br
 				strong ILLUST
-				p DrawingPasu   Dolias10
+				p DrawingPasu&nbsp;&nbsp;&nbsp;Dolias10
 				br
 				strong MUSIC
-				p Xpolcore   Sihyeon Yu   Roman Rajczyk
+				p Xpolcore&nbsp;&nbsp;&nbsp;Sihyeon Yu&nbsp;&nbsp;&nbsp;Roman Rajczyk
 				p JJoriping (Original KKuTu)
 				br
 				strong SPECIAL THANKS TO
@@ -142,6 +142,7 @@ block Middle
 				p jQuery (MIT License)
 				p Moremi by JJoriping (CC-BY)
 				p KKuTu by JJoriping (CC-BY)
+				p 국립국악원 국악 연주 (CC-BY)
 				br
 				strong GPL License
 				p Copyright © 2007 Free Software Foundation, Inc. <https://fsf.org/>
