--- a/Server/lib/Web/views/m_layout.pug
+++ b/Server/lib/Web/views/m_layout.pug
@@ -54,8 +54,8 @@ html
 				img(style="width: 120px", class="dark", src="/img/kkutu/intro/moremme_dark.svg")
 				img(style="height: 60px;", src="/img/kkutu/intro/grac_all.svg")
 			div#intro-rc
-				img(style="height: 50px", class="light", src="/img/kkutu/intro/kkutu_logo_dark.svg")
-				img(style="height: 50px", class="dark", src="/img/kkutu/intro/kkutu_logo_dark.svg")
+				img(style="height: 50px", class="light", src="/img/kkutu/logo-top.svg")
+				img(style="height: 50px", class="dark", src="/img/kkutu/logo-top.svg")
 				div#intro-text
 					+FA("circle-notch")
 					label#intro-inner= L('LOADING')
