--- a/Server/lib/Web/views/layout.pug
+++ b/Server/lib/Web/views/layout.pug
@@ -56,8 +56,8 @@ html
 				img(style="width: 200px", class="dark", src="/img/kkutu/intro/moremme_light.svg")
 				img(style="height: 120px;", src="/img/kkutu/intro/grac_all.svg")
 			div#intro-rc
-				img(style="height: 108px", class="light", src="/img/kkutu/intro/kkutu_logo_dark.svg")
-				img(style="height: 108px", class="dark", src="/img/kkutu/intro/kkutu_logo_dark.svg")
+				img(style="height: 108px", class="light", src="/img/kkutu/logo-top.svg")
+				img(style="height: 108px", class="dark", src="/img/kkutu/logo-top.svg")
 				div#intro-text
 					+FA("circle-notch")
 					label#intro-inner= L('LOADING')
