--- a/Front/static/css/in_game_kkutu_shop.css
+++ b/Front/static/css/in_game_kkutu_shop.css
@@ -26,6 +26,12 @@
     background: #FFF;
     cursor: pointer;
 }
+.goods-featured{
+	background-image: url('/img/kkutu/newproduct_modern.webp');
+	background-size: 100% 100%;
+	background-repeat: no-repeat;
+	color: #fff!important;
+}
 	.goods:hover{ background-color: #F4F4F4; }
 	.goods-image{ margin: 2px; width: 50px; height: 50px; }
 	.goods-title{     margin: 0px 0px 6px 12px;font-size: 24px;font-weight: 700; }
