--- a/Front/static/css/old_in_game_kkutu_shop.css
+++ b/Front/static/css/old_in_game_kkutu_shop.css
@@ -25,6 +25,13 @@
 	box-shadow: 0px 1px 1px #777777;
 	cursor: pointer;
 }
+
+.goods-featured{
+	background-image: url('/img/kkutu/newproduct_classic.webp');
+	background-size: 100% 100%;
+	background-repeat: no-repeat;
+	color: #fff!important;
+}
 	.goods:hover{ background-color: #F4F4F4; }
 	.goods-image{ margin: 2px; width: 50px; height: 50px; }
 	.goods-title{ margin: 2px 0px; width: 186px; font-size: 15px; font-weight: bold; }
