--- a/Server/lib/Web/views/kkutu.pug
+++ b/Server/lib/Web/views/kkutu.pug
@@ -594,24 +594,17 @@ block Middle
 			button#confirm-cancel= L('NO')
 
 	+Dialog('LvEventDiag', 730, 700, "이벤트 안내")
-		div#pre-content(style="background: #fff;")
-			img(src="/img/event/comingsoon.webp")
-		div#event-content(style="display:none;background: #fff;height: 660px;overflow-x: hidden;")
-			div#event-tabs(style="display:none;")
-				img#event1(src="/img/event/이벤트_s2.webp")
-				img#event2(src="/img/event/이벤트_mvp.webp")
-			div#event1-content(style="background: #fff;")
-				img(src="/img/event/어서와요S2_헤더.webp", style="width:100%;")
-				img(src="/img/event/어서와요S2_WP.webp")
-				img(src="/img/event/어서와요S2_타이틀1.webp")
-				div(style="font-size: 20px;text-align: center;color: gray;background-color: #fff;")
-					p#userLogic(style="margin:0px") 
-				div(style="font-size: 40px;font-weight:bold; text-align: center;color: #000;background-color: #fff;")
-					p#userLevel(style="margin:0px") 0WP
-				img#lockedItem(src="/img/event/오픈전.webp")
+		div#event-content(style="height: 660px;overflow-x: hidden;")
+			div#event-tabs(style="")
+				img#event1(src="/img/event/상단/top_신규evt.webp", style="margin-right: 20px;")
+				img#event2(src="/img/event/상단/top_준비중.webp")
+			div#event1-content(style="background: #4ADE80;")
+				img(src="/img/event/2405이벤트/신규evt/신규evt_헤더.webp", style="width:100%;")
+				img(src="/img/event/2405이벤트/신규evt/신규evt_웰컴박스.webp")
+				img#lockedItem(src="/img/event/2405이벤트/신규evt/신규evt_off.webp")
+				img(src="/img/event/2405이벤트/신규evt/신규evt_이유.webp")
 			div#event2-content(style="display:none;background: #fff;")
-				img(src="/img/event/mvp권_헤더.webp", style="width:100%;")
-				img(src="/img/event/mvp권_특전.webp")
+				img(src="/img/event/오픈전.webp", style="width:100%;")
 
 	+Dialog('TeamSelectDiag', 500, 85, "팀 설정")
 		div.team-selector
