--- a/Front/static/css/old_in_legacy_kkutu.css
+++ b/Front/static/css/old_in_legacy_kkutu.css
@@ -287,6 +287,13 @@ iframe{
 }
 	.UserListBox div{ float: left; }
 	.UserListBox .product-body{ width: 190px; height: 330px; overflow-x: hidden; overflow-y: scroll; }
+	.EventListBox{
+		width: 200px;
+		height: 360px;
+	}
+		.EventListBox div{ float: left; }
+		.EventListBox .product-body{ width: 190px; height: 330px; overflow-x: hidden; }
+		.EventListBox .product-body img{width: 190px;}
 	.users-item{ width: 190px; }
 		.users-image{ margin: 1px; width: 18px; height: 18px; }
 		.users-level{ margin: 1px; width: 18px; height: 18px; }
@@ -338,6 +345,14 @@ iframe{
 }
 	.ShopBox div{ float: left; }
 	.ShopBox .product-body{ width: 780px; height: 330px; }
+
+	.EventBox{
+		width: 790px;
+		height: 360px;
+	}
+		.EventBox div{ float: left; }
+		.EventBox .product-body{ width: 780px; height: 330px; }
+
 .RoomBox{
 	width: 1000px;
 	height: 360px;
