--- a/Server/lib/Web/views/legacy/kkutu.pug
+++ b/Server/lib/Web/views/legacy/kkutu.pug
@@ -102,6 +102,7 @@ block Middle
 		button#ExitBtn.for-master.for-normal.for-gaming(style='display: none; background-color: #FFADAD;')!= L('exit')
 		button#ReplayBtn.for-lobby(style='display: none; background-color: #D9FF82;')!= L('replay')
 		button#LeaderboardBtn.for-lobby(style='display: none; background-color: #FFADD3;')!= L('leaderboard')
+		button#EventBtn.for-lobby(style='display: none; background-color: #d09aff;')!= L('event')
 		//div#facebook-menu.fb-like.for-lobby.for-master.for-normal.for-gaming(data-href='http://kkutu.kr', data-width='300', data-layout='button_count', data-action='like', data-show-faces='true', data-share='true')
 	+Dialog('SettingDiag', 300, 405, L('settingsText'))
 		div.dialog-bar
@@ -485,6 +486,18 @@ block Middle
 		div 불러오는 중
 	+Product('RoomList')
 		div 불러오는 중
+	+Product('EventList')
+		img#event1(src="/img/event/상단/top_신규evt.webp")
+		img#event2(src="/img/event/상단/top_준비중.webp")
+	+Product('Event')
+		div#event-content(style="height: 330px;overflow-x: hidden;")
+			div#event1-content(style="background: #4ADE80;")
+				img(src="/img/event/2405이벤트/신규evt/신규evt_헤더.webp", style="width:100%;")
+				img(src="/img/event/2405이벤트/신규evt/신규evt_웰컴박스.webp", style="width:100%;")
+				img#lockedItem(src="/img/event/2405이벤트/신규evt/신규evt_off.webp", style="width:100%;")
+				img(src="/img/event/2405이벤트/신규evt/신규evt_이유.webp", style="width:100%;")
+			div#event2-content(style="display:none;background: #fff;")
+				img(src="/img/event/오픈전.webp", style="width:100%;")
 	+Product('Shop')
 		div.shop-categories
 			- for(var i in locals.CATEGORIES)
