feat: Update event images and fix Korean translations

--- a/Server/lib/Web/views/kkutu.pug
+++ b/Server/lib/Web/views/kkutu.pug
@@ -597,13 +597,15 @@ block Middle
 		div#event-content(style="height: 660px;overflow-x: hidden;")
 			div#event-tabs(style="")
 				img#event1(src="/img/event/상단/top_신규evt.webp", style="margin-right: 20px;")
-				img#event2(src="/img/event/상단/top_준비중.webp")
+				img#event2(src="/img/event/상단/top_5월evt.webp")
 			div#event1-content(style="background: #4ADE80;")
 				img(src="/img/event/2405이벤트/신규evt/신규evt_헤더.webp", style="width:100%;")
 				img(src="/img/event/2405이벤트/신규evt/신규evt_웰컴박스.webp")
 				img#lockedItem(src="/img/event/2405이벤트/신규evt/신규evt_off.webp")
 				img(src="/img/event/2405이벤트/신규evt/신규evt_이유.webp")
 			div#event2-content(style="display:none;background: #fff;")
+				img(src="/img/event/2405이벤트/5월evt.webp", style="width:100%;")
+			div#event3-content(style="display:none;background: #fff;")
 				img(src="/img/event/오픈전.webp", style="width:100%;")
 
 	+Dialog('TeamSelectDiag', 500, 85, "팀 설정")
