--- a/Server/lib/Web/views/legacy/kkutu.pug
+++ b/Server/lib/Web/views/legacy/kkutu.pug
@@ -488,7 +488,8 @@ block Middle
 		div 불러오는 중
 	+Product('EventList')
 		img#event1(src="/img/event/상단/top_신규evt.webp")
-		img#event2(src="/img/event/상단/top_준비중.webp")
+		img#event2(src="/img/event/상단/top_5월evt.webp")
+		img#event3(src="/img/event/상단/top_준비중.webp")
 	+Product('Event')
 		div#event-content(style="height: 330px;overflow-x: hidden;")
 			div#event1-content(style="background: #4ADE80;")
@@ -497,6 +498,8 @@ block Middle
 				img#lockedItem(src="/img/event/2405이벤트/신규evt/신규evt_off.webp", style="width:100%;")
 				img(src="/img/event/2405이벤트/신규evt/신규evt_이유.webp", style="width:100%;")
 			div#event2-content(style="display:none;background: #fff;")
+				img(src="/img/event/2405이벤트/5월evt.webp", style="width:100%;")
+			div#event3-content(style="display:none;background: #fff;")
 				img(src="/img/event/오픈전.webp", style="width:100%;")
 	+Product('Shop')
 		div.shop-categories
