마이그레이션 관련 내용 추가

--- a/Server/lib/Web/views/kkutu.pug
+++ b/Server/lib/Web/views/kkutu.pug
@@ -105,6 +105,9 @@ block Middle
 	div#dimmer(style="display: none;")
 	div#tost_message
 	div#contextMenuContainer
+	div.hidden
+		button#recorder-start-stop
+		video#recorder
 	
 	div#evtpopup(style="display: none;position: absolute;height: 100%;width: 100%;align-items: center;justify-content: center;align-content: center;z-index: 3;background-color: rgba(0, 0, 0, 0.6);")
 		div(style='text-align: center;font-size: 18px;')
