Phase UP 추가 및 보안코드 구현

--- a/Front/static/css/old_in_legacy_kkutu.css
+++ b/Front/static/css/old_in_legacy_kkutu.css
@@ -41,7 +41,7 @@
 		left: 0px;
 		width: 100%;
 		font-size: 36px;
-		color: black;
+		color: white;
 		font-weight: 700;
 		text-align: center;
 	}
@@ -361,9 +361,9 @@ iframe{
 	.RoomBox .product-title h5{ float: left; }
 		.room-head-modified{ animation: ModifiedBlink 1s ease 3; }
 		.room-head-number{ width: 35px; text-align: center; }
-		.room-head-title{ font-weight: bold; width: 505px; }
+		.room-head-title{ font-weight: bold; width: 450px; }
 		.room-head-mode{ margin-right: 5px; width: 255px; text-align: right; }
-		.room-head-limit{ width: 70px; text-align: center; }
+		.room-head-limit{ width: 100px; text-align: center; }
 		.room-head-round{ width: 70px; text-align: center; }
 		.room-head-time{ width: 54px; text-align: center; }
 	.team-selector{
