--- a/Server/lib/Web/views/legacy/layout.pug
+++ b/Server/lib/Web/views/legacy/layout.pug
@@ -69,7 +69,7 @@ html
 				if locals.as_pc
 					a(href='?')!= L('AS_MOBILE')
 				br
-				a.bottom-contact(href='https://morem.me', target='_blank')!= "About Morem.ME"
+				a.bottom-contact(href='https://kkutu.plus', target='_blank')!= "About Plus KKuTu Team"
 				a.bottom-contact(href='mailto:support@kkutu.plus', target='_blank')!= "Contact support@kkutu.plus"
 			div.bottom-legal!= L('GPL')
 			+separator(10)
