--- a/Server/lib/Web/views/m_kkutu.pug
+++ b/Server/lib/Web/views/m_kkutu.pug
@@ -95,8 +95,8 @@ block Middle
 	div#tost_message
 	div#evtpopup(style="margin-top: -40px;display: none;position: absolute;height: 100%;width: 100%;align-items: center;justify-content: center;align-content: center;z-index: 3;background-color: rgba(0, 0, 0, 0.6);")
 		div(style='text-align: center;font-size: 18px;')
-			a(href="https://discord.gg/bt25WdwzR7", target="_blank")
-				img(src="/img/event/디코이벤트.webp", style="width: 90vw;")
+			a(href="https://www.youtube.com/channel/UCS4JHtLk8zsxgsSzVIrUZZA", target="_blank")
+				img(src="/img/event/페이즈업리오.webp", style="width: 90vw;")
 			div.dialog-bar.d2-bar.tail-button
 				button.primaryBtn#evtpopup-ok= L("close")
 	div#creditpopup(style="display: none;position: absolute;height: 100%;width: 100%;align-items: center;justify-content: center;align-content: center;z-index: 2;background-color:#000;")
@@ -104,7 +104,7 @@ block Middle
 			button#creditpopup-close= "×"
 		div#creditpopup-content
 			div(style="width: 80%;font-size: 20px;text-align: center;color:#fff;")
-				p(style="font-size: 36px;font-weight: 700;") Morem.ME Team
+				p(style="font-size: 36px;font-weight: 700;") Plus KKuTu Team Team
 				strong DIRECTOR
 				p 유한선
 				br
@@ -462,7 +462,7 @@ block Middle
 				| 에서 게임 정보를 받아볼 수 있어요.
 				br
 				br
-				small 계속하시면 Morem.ME의 개인정보처리방침 및 이용약관에 동의합니다.
+				small 계속하시면 Plus KKuTu Team의 개인정보처리방침 및 이용약관에 동의합니다.
 		div.dialog-bar.d2-bar.tail-button
 			button.primaryBtn#setNickname(style="width:300px;")!= L("acceptContinue")
 
@@ -503,7 +503,7 @@ block Middle
 
 				div.sideFooter
 					//img(src="/img/kkutu/moremme_gray.svg")
-					p Copyright &copy; 2021~ Morem.ME
+					p Copyright &copy; 2021~ Plus KKuTu Team
 	+Product('UserList')
 		div#megauser
 			p.conn-desc.mfriend(style="display:none;")!= L('friendConn')
