--- a/Front/static/css/in_m_kkutu.css
+++ b/Front/static/css/in_m_kkutu.css
@@ -42,7 +42,7 @@ html {
     position: fixed;
     z-index: 4;
     width: 100vw;
-	background-image: url(/img/kkutu/splash.webp);
+	background-image: url('/img/kkutu/PC로딩 이미지.webp');
 	box-shadow: inset 0 0 5em 1em #000;
 	background-position: right;
     background-repeat: no-repeat;
